# mcp_test

./: Dockerfile  Dockerfile.sse  README.md  main.py  pyproject.toml  requirements.txt  smithery.yaml  test.ipynb
01_basic_stdio/: client.py  mcp_config.json  server.py
02_basic_sse/: client.py  mcp_config.json  server.py
03_RAG_stdio/: client.py  mcp_config.json  server.py  test.ipynb
03_RAG_stdio/my-vectordb/: index.faiss  index.pkl
04_MultiServerMCP/: client.ipynb
05_MCP_docker/: client.py  server_sse.py  server_stdio.py
